# django-app

./: .coveragerc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: env.py  settings.py  urls.py
app/auth/: apps.py  models.py  serializers.py  urls.py  views.py
app/auth/migrations/: 0001_initial.py
app/common/: authentication.py  fields.py
app/common/logging/: filters.py  trace.py
app/common/middlewares/: logging.py
app/common/security/: credentials.py  jwt.py
app/order/: mixins.py  models.py  serializers.py  urls.py  views.py
app/order/migrations/: 0001_initial.py
app/product/: apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
app/product/migrations/: 0001_initial.py
conf/: nginx.conf
tests/: base.py  test_auth.py  test_order.py  test_product.py
